<resources>
    <string name="app_name">MonitorCompositCallCenter</string>
    <string name="button">Button</string>
    <string name="select_monitor">Select Monitor</string>
    <string name="agent">AGENT</string>
    <string name="campaign">CAMPAIGN</string>
    <string name="how_to_show_data">How To Show Data</string>
    <string name="ivr_line">IVR LINE</string>
    <string name="queue">QUEUE</string>
    <string name="toexit">ToExit</string>
    <string name="agent_monitor">Agent Monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="campaign_monitor">campaign_monitor</string>
</resources>
